[package]
name = "xterminate"
version = "1.1.0"
edition = "2021"
authors = ["Xela <https://github.com/imxela/>"]
license-file = "LICENSE"
readme = "README"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.5.9"
chrono = "0.4.26"
backtrace = "0.3"
os_info = "3.7.0"

[dependencies.windows]
version = "0.35.0"
features = [
    "alloc",
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_Devices_HumanInterfaceDevice",
    "Win32_UI_Shell",
    "Win32_Security",
    "Win32_System_Registry"
]

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[package.metadata.winres]
OriginalFilename = "xterminate.exe"
LegalCopyright = "Copyright (c) 2023 Xela, see LICENSE file for more information."