[package]
name = "xterminate"
description = "Easily terminate any windowed process by the press of a button."
repository = "https://github.com/imxela/xterminate"
keywords = [ "windows", "rust", "utility", "tool", "kill", "terminate", "task-kill", "alt-f4" ]
version = "2.0.0"
edition = "2021"
authors = ["Xela <https://github.com/imxela/>"]
license-file = "LICENSE"
readme = "README"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.12.4", features = ["stream", "blocking", "json"] }
tokio = { version = "1.37.0", features = ["full"] }
toml = "0.5.9"
chrono = "0.4.26"
backtrace = "0.3"
os_info = "3.7.0"
uuid = { version = "1.8.0", features = ["v4"] }
tempfile = "3.10.1"
zip = "2.1.2"
thiserror = "1.0.61"

[dependencies.windows]
version = "0.52.0"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_Devices_HumanInterfaceDevice",
    "Win32_UI_Shell",
    "Win32_Security",
    "Win32_System_Registry",
    "Win32_System_ProcessStatus",
    "Win32_UI_Controls",
    "Win32_Storage_FileSystem",
    "Win32_System_Diagnostics_ToolHelp"
]

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[package.metadata.winres]
OriginalFilename = "xterminate.exe"
LegalCopyright = "Copyright (c) 2024 Xela, see LICENSE file for more information."